issue alignment issue in profile header

--- a/src/app/shared/components/profile-header/profile-header.component.scss
+++ b/src/app/shared/components/profile-header/profile-header.component.scss
@@ -26,7 +26,7 @@
   white-space: nowrap;
   overflow: hidden;
   display: block;
-  height: 30px;
+  height: 40px;
 }
 
 .edit-button {
